# implementation_of_programming_languages

./: .gitignore  README.md  fun.opam
examples/: catalan.fn  fact.fn  fib.fn  incr.fn
first_interpreter_and_compiler/: dune-project
first_interpreter_and_compiler/lib/: compiler.ml  dune  interpreter.ml  lexer.mll  parse.ml  parser.mly
first_interpreter_and_compiler/test/: dune
fun-no-state-interpreter/: lambda-calculus-interpreter.opam
fun-no-state-interpreter/lib/: fv.ml  subst.ml
fun-secd-compiler/: README.md  dune-project
fun-secd-compiler/examples/: fact.fn
fun-secd-compiler/lib/: ast.ml  compile.ml  dune  execute.ml  lexer.mll  lookup.ml  parse.ml  parser.mly  run.ml  types.ml
fun-with-state-interpreter/: .gitignore  test
fun-with-state-interpreter/examples/: fact.lmda
fun-with-state-interpreter/lib/: ast.ml  dune  eval.ml  lookup.ml  value.ml
lambda-calculus-interpreter-with-state/: dune-project
lambda-calculus-interpreter-with-state/lib/: eval.ml  lookup.ml
lambda-calculus-interpreter/lib/: eval.ml  subst.ml
lambda-calculus-interpreter/test/: dune
lib/: compile.ml  dune  execute.ml  exn.ml  lookup.ml  parse.ml  parser.mly  repl.ml  run.ml  secd.ml  trace.ml
