(lang dune 3.19)
(using menhir 2.1)

(name fun)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Diogo Gomes de Araújo <contact@diogoaraujo.com>")

(maintainers "Diogo Gomes de Araújo <contact@diogoaraujo.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name fun)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
